# polibeepsync

./: .coveragerc  .flake8  .gitchangelog.rc  .gitignore  .landscape.yaml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  LICENSE.md  LICENSE.old  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  build_doc.sh  buildwin.py  cxfreeze-setup.py  mac_setup.py  polibeepsync.py  polibeepsync.spec  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_all.sh  uglytheme.qrc
docs/: debug.html  genindex.html  index.html  installation-linux.html  make.bat  objects.inv  polibeepsync.html
docs-build/: Makefile
docs-build/source/: conf.py  debug.rst  index.rst  installation-linux.rst  modules.rst
docs/_sources/: installation-linux.rst.txt
features/: __init__.py  choosecourses.feature  environment.py  login.feature  obtaindata.feature  syncing.feature  wizard.feature
icons/: main-icon.xcf
polibeepsync/: ancora.py  beep.pem  cmdlineparser.py  common.py  custom_qt5_elements.py  database_manager.py  db.py  filesettings.py  icone.qrc  icone_rc.py  material-blue.qss  new_gui.ui  plugin_manager.py  polibeepsync.py  qt-guy.py  qtgui.py  qtguy.py  queries.py  std_dicts.py  ui_about.py  ui_main.py  ui_resizable.py  utils.py  widget.py
scripts/: buildwin.py  pre-push-hook  sanity_check.sh  svg2icns.sh
tests/: courses-page.json  nicer-courses-page.json  test_comparisons.py  test_filesettings.py  test_polibeepsync.py  test_polibeepsync_requests.py  test_utils.py
user_interfaces/: add_course_popup.ui  main_form.ui  material-blue.qss  new_gui.ui
(+75 files in other folders)
