[metadata]
name = poliBeePsync
author = Davide Olianas
author-email = ubuntupk@gmail.com
summary = Keep your files
license = MIT
description-file =
    README.md
home-page = http://pypi.python.org/pypi/foobar
requires-python = =3.4
classifier =
    Development Status :: 1 - Planning
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English    
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4

[files]
packages =
    polibeepsync

