[metadata]
name = poliBeePsync
author = Davide Olianas
author-email = ubuntupk@gmail.com
summary = Sync files from https://beep.metid.polimi.it (for students of Politecnico di Milano)
license = GPLv3+
description-file =
    README.rst
home-page = http://www.davideolianas.com/polibeepsync
requires-python = =3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English    
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4

[files]
packages =
    polibeepsync

[entry_points]
console_scripts =
    polibeepsync = polibeepsync.qtgui:main
